--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -3,6 +3,7 @@
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
 
+  // Part of designing Hamburger Menu
   display: flex;
   justify-content: center; // Axis x ––
 }
