--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -7,6 +7,9 @@
 
 .heading-1 {
   @extend %heading; // clean code :D
+  font-size: 4.5rem;
+  color: $color-grey-light-1;
+  line-height: 1;
 }
 
 .heading-2 {
