--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -14,6 +14,10 @@ $color-grey-dark-2: #6d5d4b;
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
 
+// Media Queries Responsive Breakpoints
+$bp-largest: 75em; // 1200px / 16px <===FontSize = 75em
+$bp-large: 62.5em; // 1000px / 16px <===FontSize = 62.5em
+
 *,
 *::before,
 *::after {
@@ -25,6 +29,10 @@ $font-display: "Josefin Sans", sans-serif;
 html {
   box-sizing: border-box;
   font-size: 62.5%; // so that 1rem ===  exactly 10px // So 10px /divided by 16px which is the browser default = equal 0,625
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -38,7 +46,7 @@ body {
   display: grid;
 
   // rows
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content); // No need for media query with this responsive rows
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content); //  responsive rows
 
   // columns
 
@@ -49,6 +57,14 @@ body {
     [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end] minmax(6rem, 1fr) [full-end];
+
+  @media only screen and (max-width: $bp-large) {
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns:
+      [full-start] minmax(6rem, 1fr)
+      [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+      [center-end] minmax(6rem, 1fr) [full-end];
+  }
 
   // & > * Container and all the direct children
   // only for development purpose
