--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -13,8 +13,9 @@
 
   //////
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  //responsive columns for other screens
+  grid-template-columns: minmax(min-content, max-content);
   row-gap: 2rem;
 
   justify-content: center; // X Axis ––––
@@ -53,9 +54,11 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 3rem;
     justify-items: center; // X Axis ––––
+    align-items: center; // Y Axis |
 
     img {
-      height: 2.5rem;
+      max-height: 2.5rem; //responsive img
+      max-width: 100%; //responsive img
       // to kill the whiteness of the logos
       filter: brightness(70%);
     }
