--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -20,6 +20,14 @@
 
   justify-content: center; // X Axis ––––
 
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 5rem;
+  }
+
   &__logo {
     height: 3rem;
     justify-self: center;
