--- a/src/scss/_realtors.scss
+++ b/src/scss/_realtors.scss
@@ -6,8 +6,12 @@
   display: grid;
   align-content: center; // Y Axis |
   justify-content: center; // X Axis –––
+  justify-items: center; // X Axis –––
   row-gap: 2rem;
-  justify-items: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
 
   &__list {
     display: grid;
@@ -15,6 +19,14 @@
     column-gap: 2rem;
     row-gap: 5vh;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: min-content max-content;
+    }
   }
 
   &__img {
