Browser Support for CSS Grid

--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -13,9 +13,34 @@
   gap: 6rem;
 
   align-items: start;
+  /* 
+  // this code is for browsers that don't support grid as fallbacks
+  @supports (display: grid) {
+    display: grid;
+    //grid-template-columns: repeat(3, 1fr);
+    // rows are NOT needed to define because they will be defined automatically
+    //grid-template-rows: auto auto;
+
+    // Responsive grid columns without any media query
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 6rem;
+
+    align-items: start;
+  } */
 }
 
 .feature {
+  /*   
+  float: left;
+  width: 33.3333%;
+  margin-bottom: 6rem;
+
+  // this code is for browsers that don't support grid as fallbacks
+  @supports (display: grid) {
+    width: auto;
+    margin-bottom: 0;
+  }
+ */
   display: grid;
   grid-template-columns: min-content 1fr;
   row-gap: 1.5rem;
